# starfoxgame

./: .gitignore  CMakeLists.txt
src/: Bullet.cpp  Bullet.h  ClassAnimationManager.cpp  ClassAnimationManager.h  ClassPers.cpp  ClassPers.h  Cursor.cpp  Cursor.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Map.cpp  Map.h  Player.cpp  Player.h  main.cpp
